--- a/API Fetching/index.html
+++ b/API Fetching/index.html
@@ -11,12 +11,14 @@
    <h1 align="center">Fresh Markets</h1>
     <div class="headSec">
         <div class="Markets" id="showData">Markets</div>
-        <div class="Stock">Stock</div>
+        <div class="Stock" id="stockData">Stock</div>
         <div class="Sales">Sales</div>
     </div>
     
-
+<!-- Data display Div -->
     <div id="dataDisplay"></div>
+    <div id="stockDisplay"></div>
+
     <script src="./index.js"></script>
 </body>
 </html>
