Fetch salesDatas like sale items,qty,category and revenue

--- a/API Fetching/index.html
+++ b/API Fetching/index.html
@@ -12,12 +12,13 @@
     <div class="headSec">
         <div class="Markets" id="showData">Markets</div>
         <div class="Stock" id="stockData">Stock</div>
-        <div class="Sales">Sales</div>
+        <div class="Sales" id="salesData">Sales</div>
     </div>
     
 <!-- Data display Div -->
     <div id="dataDisplay"></div>
     <div id="stockDisplay"></div>
+    <div id="saleDisplay"></div>
 
     <script src="./index.js"></script>
 </body>
